--- a/assets/scss/hkgStyle/_hkgColor.scss
+++ b/assets/scss/hkgStyle/_hkgColor.scss
@@ -74,6 +74,8 @@ box-shadow: 1px -4px 15px -2px rgba(112,112,112,0.42);
     -moz-box-shadow: 1px -4px 15px -2px rgba(112,112,112,0.42);
   }
   }
-//@$hkg-blue
+//@$hkg-color
 $hkg-blue: #1101A9 !default;
+$hkg-orange: #FE650B !default;
 .hkg-blue{color: $hkg-blue;}
+.hkg-orange{color: $hkg-orange;}
