--- a/assets/scss/hkgStyle/_hkgHeader.scss
+++ b/assets/scss/hkgStyle/_hkgHeader.scss
@@ -35,5 +35,5 @@
   background-color: #FE650B!important;
 }
 .hkg-text-shadow{
-  text-shadow: 0.1em 0.1em 0.2em $white;
+  text-shadow: 0.1em 0.1em 0.2em $gray-700;
 }
