--- a/assets/scss/all.css
+++ b/assets/scss/all.css
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Yeseva+One&display=swap");
 .white {
   color: #fefefe !important;
 }
@@ -126,6 +130,473 @@
   color: #FE650B;
 }
 
+@font-face {
+  font-family: Gotham, sans-serif;
+  src: url("/assets/fonts/Gotham-Bold.otf") format("opentype");
+}
+
+@font-face {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  src: url("/assets/fonts/Gotham-Book.otf") format("opentype");
+}
+
+.text-bold {
+  font-weight: 500 !important;
+}
+
+.text-r-0-1-0 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 12px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-0-1-0 {
+    font-size: 12px;
+  }
+}
+
+.text-r-1-1-1 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-1-1-1 {
+    font-size: 16px;
+  }
+}
+
+.text-r-2-1-2 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-r-3-1-3 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-r-4-1-4 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.text-r-5-1-5 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.text-r-6-1-6 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.text-r-7-1-7 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 100;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.text-r-1-3-1 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-1-3-1 {
+    font-size: 14px;
+  }
+}
+
+.text-r-2-3-2 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-r-3-3-3 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-r-4-3-4 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.text-r-5-3-5 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.text-r-6-3-6 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.text-r-7-3-7 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 300;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.text-r-1-4-1 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-1-4-1 {
+    font-size: 14px;
+  }
+}
+
+.text-r-2-4-2 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-r-3-4-3 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-r-4-4-4 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.text-r-5-4-5 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-5-4-5 {
+    font-size: 24px;
+  }
+}
+
+.text-r-6-4-6 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-6-4-6 {
+    font-size: 32px;
+  }
+}
+
+.text-r-7-4-7 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.text-r-1-5-1 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-1-5-1 {
+    font-size: 14px;
+  }
+}
+
+.text-r-2-5-2 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-r-3-5-3 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-r-4-5-4 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-4-5-4 {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.text-r-5-5-5 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.text-r-6-5-6 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-r-6-5-6 {
+    font-size: 30px;
+    line-height: 48px;
+  }
+}
+
+.text-r-7-5-7 {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.text-shadow-black {
+  text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+.text-y-1-4-1 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-y-1-4-1 {
+    font-size: 16px;
+  }
+}
+
+.text-y-2-4-2 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-y-3-4-3 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-y-4-4-4 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-y-4-4-4 {
+    font-size: 18px;
+    line-height: 27px;
+  }
+}
+
+.text-y-5-4-5 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.text-y-6-4-6 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.text-y-7-4-7 {
+  font-family: 'Yeseva One', cursive;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.text-g-1-b-1 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-g-1-b-1 {
+    font-size: 16px;
+  }
+}
+
+.text-g-2-b-2 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-g-3-b-3 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-g-4-b-4 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-g-4-b-4 {
+    font-size: 18px;
+    line-height: 27px;
+  }
+}
+
+.text-g-5-b-5 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.text-g-6-b-6 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.text-g-7-b-7 {
+  font-family: Gotham, sans-serif;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.text-g-1-l-1 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-g-1-l-1 {
+    font-size: 16px;
+  }
+}
+
+.text-g-2-l-2 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.text-g-3-l-3 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.text-g-4-l-4 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+@media screen and (max-width: 500px) {
+  .text-g-4-l-4 {
+    font-size: 18px;
+    line-height: 27px;
+  }
+}
+
+.text-g-5-l-5 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.text-g-6-l-6 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.text-g-7-l-7 {
+  font-family: Gotham, sans-serif;
+  font-weight: lighter;
+  font-size: 48px;
+  line-height: 84px;
+}
+
+.hkg-font {
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK', 'Noto Sans HK' !important;
+}
+
 .nav-top {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -164,7 +635,7 @@
 }
 
 .hkg-text-shadow {
-  text-shadow: 0.1em 0.1em 0.2em #fefefe;
+  text-shadow: 0.1em 0.1em 0.2em #767676;
 }
 
 .breadcrumb {
@@ -173,5 +644,32 @@
 
 .breadcrumb a {
   color: #1101A9;
+}
+
+.testimonial-5 .testimonial-name {
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK', 'Noto Sans HK' !important;
+}
+
+.hkg-img-style {
+  max-height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.rev-slidebg {
+  opacity: 0.4 !important;
+  filter: alpha(opacity=40);
+  /*  IE8 及更早的版本 */
+}
+
+.site-filters .active > [class*="site-button"] {
+  background-color: #FE650B;
+}
+
+.wwwwww img {
+  width: 480px;
+  max-width: 480px;
 }
 /*# sourceMappingURL=all.css.map */
