--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -2,7 +2,7 @@
 //@import "../scss/plugin/boostrap";
 //HKS Style
 @import "../scss/hkgStyle/hkgColor";
-//@import "../scss/hksStyle/hksFonts";
+@import "../scss/hkgStyle/hkgFonts";
 //@import "../scss/hksStyle/hksBanner";
 //@import "../scss/hksStyle/hksBtn";
 //@import "../scss/hksStyle/hksCard";
@@ -17,5 +17,41 @@
   padding: .75rem 0rem;
   a{
     color: $hkg-blue;
+  }
+}
+//cover
+.testimonial-5 .testimonial-name {
+  margin-bottom: 15px;
+  font-size: 18px;
+  //font-family: "Montserrat", serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK', 'Noto Sans HK' !important;
+}
+.hkg-img-style{
+  max-height: 300px;
+  object-fit: cover;
+}
+//.slotholder {
+//  opacity:0.4;
+//  filter:alpha(opacity=40); /*  IE8 及更早的版本 */ 
+//}
+.rev-slidebg {
+  opacity:0.4 !important;
+  filter:alpha(opacity=40); /*  IE8 及更早的版本 */ 
+}
+//history
+.site-filters .active > [class*="site-button"]{
+//  background-color: #6C95C7;
+  background-color: $hkg-orange;
+}
+//img
+
+.wwwwww{
+//  .w3-thum{
+  img{
+    width: 480px;
+    max-width: 480px;
+    //height: 430px;
+    //max-height: 430px;
+    //object-fit: cover;
   }
 }
