--- a/assets/scss/hkgStyle/_hkgFonts.scss
+++ b/assets/scss/hkgStyle/_hkgFonts.scss
@@ -19,6 +19,9 @@
 //Roboto:100>thin,300>light,400>regilar,500>medium
 //font-family: 'Roboto', sans-serif;
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap');
+//Noto Sans HK
+//font-family: 'Noto Sans HK', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100;300;400;500&display=swap');
 //Yeseva One
 //font-family: 'Yeseva One', cursive;
 @import url('https://fonts.googleapis.com/css?family=Yeseva+One&display=swap');
@@ -50,7 +53,7 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
 // }
 //100>thin
 .text-r-0-1-0{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   font-size: 12px;
   @media screen and (max-width: 500px) {
@@ -58,7 +61,7 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-1-1-1{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(1);
   @include leading(1);
@@ -67,44 +70,44 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-2-1-2{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(2);
   @include leading(2);
 }
 .text-r-3-1-3{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(3);
   @include leading(3);
 }
 .text-r-4-1-4{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(4);
   @include leading(4);
 }
 .text-r-5-1-5{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(5);
   @include leading(5);
 }
 .text-r-6-1-6{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(6);
   @include leading(6);
 }
 .text-r-7-1-7{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 100;
   @include font(7);
   @include leading(7);
 }
 //300>light
 .text-r-1-3-1{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(1);
   @include leading(1);
@@ -113,44 +116,44 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-2-3-2{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(2);
   @include leading(2);
 }
 .text-r-3-3-3{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(3);
   @include leading(3);
 }
 .text-r-4-3-4{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(4);
   @include leading(4);
 }
 .text-r-5-3-5{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(5);
   @include leading(5);
 }
 .text-r-6-3-6{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(6);
   @include leading(6);
 }
 .text-r-7-3-7{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 300;
   @include font(7);
   @include leading(7);
 }
 //400>regilar
 .text-r-1-4-1{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(1);
   @include leading(1);
@@ -159,25 +162,25 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-2-4-2{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(2);
   @include leading(2);
 }
 .text-r-3-4-3{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(3);
   @include leading(3);
 }
 .text-r-4-4-4{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(4);
   @include leading(4);
 }
 .text-r-5-4-5{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(5);
   @include leading(5);
@@ -186,7 +189,7 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-6-4-6{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(6);
   @include leading(6);
@@ -195,14 +198,14 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-7-4-7{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 400;
   @include font(7);
   @include leading(7);
 }
 //500>medium
 .text-r-1-5-1{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(1);
   @include leading(1);
@@ -211,19 +214,19 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   }
 }
 .text-r-2-5-2{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(2);
   @include leading(2);
 }
 .text-r-3-5-3{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(3);
   @include leading(3);
 }
 .text-r-4-5-4{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(4);
   @include leading(4);
@@ -233,13 +236,13 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
     }
 }
 .text-r-5-5-5{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(5);
   @include leading(5);
 }
 .text-r-6-5-6{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(6);
   @include leading(6);
@@ -249,7 +252,7 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
     }
 }
 .text-r-7-5-7{
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK';
   font-weight: 500;
   @include font(7);
   @include leading(7);
@@ -408,4 +411,8 @@ $leading: 21px 27px 30px 36px 48px 60px 84px;
   font-weight: lighter;
   @include font(7);
   @include leading(7);
+}
+//roboto
+.hkg-font{
+  font-family: 'Roboto', sans-serif , 'Noto Sans HK', 'Noto Sans HK' !important;
 }
