--- a/assets/scss/hkgStyle/_hkgColor.scss
+++ b/assets/scss/hkgStyle/_hkgColor.scss
@@ -77,5 +77,7 @@ box-shadow: 1px -4px 15px -2px rgba(112,112,112,0.42);
 //@$hkg-color
 $hkg-blue: #1101A9 !default;
 $hkg-orange: #FE650B !default;
+$hkg-orange-400: #FEAF10 !default;
 .hkg-blue{color: $hkg-blue;}
+.hkg-orange-400{color: $hkg-orange-400;}
 .hkg-orange{color: $hkg-orange;}
